--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -1,4 +1,5 @@
 <!-- index.ejs -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +27,7 @@
                 <li style="margin-bottom: 20px; box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); padding: 15px; border-radius: 5px;">
                     <h2 onclick="viewJournalEntry('<%= entry._id %>')"><%= entry.title %></h2>
                     <p><%= entry.content %></p>
+                    <p>Posted by: <%= entry.user %> | Date: <%= new Date (entry.date).toLocaleDateString() %></p>
                 </li>
             <% }); %>
         </ul>
